--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+    // 项目需要的依赖 // 协程库
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+
+    // Retrofit库 ci Retrofit zhichi xiecheng
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:retrofit-mock:2.7.2"
+    implementation "com.squareup.retrofit2:converter-gson:2.8.1"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation "com.squareup.retrofit2:converter-scalars:2.8.1"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.8.1"
+
+    /// rxjava Android 的一些方法
+    implementation(["io.reactivex.rxjava2:rxandroid:$rxandroid_version",
+                    "io.reactivex.rxjava2:rxjava:$rxjava_version"])
 }
