--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         <activity
             android:name="com.example.jetpatchlearning.MainActivity"
             android:exported="true">
+        </activity>
+        <activity android:name=".ui.RegisterActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".ui.LoginActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
